--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.3",
-    "request": "^2.85.0",
-    "sequelize": "^4.37.7"
+    "node-cron": "^1.2.1",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "sequelize": "^4.37.7",
+    "unescape": "^1.0.1",
+    "xml2js": "^0.4.19"
   }
 }
