--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-entities": "^1.2.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.3",
     "node-cron": "^1.2.1",
