--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.257.1",
     "bluebird": "^3.5.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "jade": "~1.11.0",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql2": "^1.5.3",
     "node-cron": "^1.2.1",
     "request": "^2.87.0",
